--- a/lib/assets/barcode.html
+++ b/lib/assets/barcode.html
@@ -12,7 +12,7 @@
          top: 0;
          }
          html, body {
-         height: 100%; /* IMPORTANT!!! Stretches viewport to 100% */
+         height: 90%; /* IMPORTANT!!! Stretches viewport to 100% */
          }
       </style>
     <script src="html5-qrcode.min.js"></script>
@@ -40,11 +40,11 @@
 
  };
  const config = {
-     fps: 10,
+     fps: 60,
      qrbox: {
          width: 280,
-         height: 120,
-         aspectRatio: 1.7777778
+         height: 280,
+         aspectRatio: 1.1
      }
  };
 
